# brentnequin-nuxt2

./: .gitignore  README.md  nuxt.config.js  package.json  pyproject.toml  tailwind.config.js  vercel.json
api/: config.py  index.py  notion.js
assets/css/: fonts.css  tailwind.css
components/: About.stories.js  About.vue  BrentNequin.stories.js  BrentNequin.vue  Card.stories.js  Card.vue  Icon.stories.js  Icon.vue  PageNotFound.stories.js  PageNotFound.vue  Posts.stories.js  Posts.vue  Projects.stories.js  Projects.vue  TheFooter.stories.js  TheFooter.vue  TheHeader.stories.js  TheHeader.vue
components/Notion/: Article.vue
components/Notion/Block/: index.vue
layouts/: default.vue
pages/: index.vue  test.vue
pages/read/: _slug.vue  index.vue
store/: index.js
test/: Notion.Article.spec.js  Posts.spec.js  TheHeader.spec.js
