[tool.poetry]
name = "brentnequin"
version = "0.1.0"
description = ""
authors = ["brentnequin <brentnequin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
